<resources>
    <string name="app_name">Parking App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">ParkingMap</string>
    <string name="payment">Payment</string>
    <string name="CVV">CVV</string>
    <string name="year">YY</string>
    <string name="month">MM</string>
    <string name="creditcard">Credit Card Number</string>
    <string name="country">Country</string>
    <string name="zip">ZIP</string>
    <string name="login">Login</string>
    <string name="pay">Pay</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_delete_me_im_atest">DeleteMeImATest</string>
    <string name="search_location">Search Location</string>
</resources>
