<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wallet="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_credit_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rsavage.parkingapp.CreditInfoActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creditcard"
        android:inputType="number"
        android:maxLines="1"
        android:ems="10"
        android:maxLength="16"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_credit_card_black_24dp"
        android:id="@+id/creditcard"
        android:layout_alignStart="@+id/country" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/month"
        android:maxLength="2"
        android:layout_below="@+id/creditcard"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/month" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/year"
        android:maxLength="2"
        android:layout_alignTop="@+id/month"
        android:layout_toEndOf="@+id/month"
        android:layout_marginStart="13dp"
        android:id="@+id/year" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1"
        android:hint="@string/CVV"
        android:maxLength="3"
        android:ems="10"
        android:layout_alignBaseline="@+id/year"
        android:layout_alignBottom="@+id/year"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/country"
        android:ems="10"
        android:maxLength="3"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:id="@+id/country"
        android:layout_marginStart="6dp"
        android:layout_below="@+id/month"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="5"
        android:maxLines="1"
        android:hint="@string/zip"
        android:id="@+id/zip"
        android:layout_alignBaseline="@+id/country"
        android:layout_alignBottom="@+id/country"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/pay"
        android:layout_below="@+id/country" />

    <fragment
        android:id="@+id/android_pay"
        android:name="com.google.android.gms.wallet.fragment.WalletFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        wallet:environment="test"
        wallet:fragmentMode="buyButton"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/pay"/>

    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        wallet:srcCompat="@drawable/ic_credit_card_black_24dp"
        android:id="@+id/imageButton"
        android:layout_alignEnd="@+id/creditcard"
        android:layout_alignBottom="@+id/creditcard"
        android:layout_marginStart="14dp" />

</RelativeLayout>
